define data structure
