# src/go-server-server-generated/go/model_reply.go
@@ -7,14 +7,17 @@
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
 package swagger
+import (
+	"time"
+)
 
-type User struct {
+type Reply struct {
 
-	Id int64 `json:"id,omitempty"`
+	LikeNum int32 `json:"likeNum,omitempty"`
 
-	Password string `json:"password,omitempty"`
+	CreateTime time.Time `json:"createTime,omitempty"`
 
-	Articles []Article `json:"articles,omitempty"`
+	Content string `json:"content,omitempty"`
 
-	Email string `json:"email,omitempty"`
+	AuthorUrl string `json:"author-url,omitempty"`
 }
